/*
* This file is part of the NUbots Codebase.
*
* The NUbots Codebase is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* The NUbots Codebase is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with the NUbots Codebase.  If not, see <http://www.gnu.org/licenses/>.
*
* Copyright 2014 NUbots <nubots@nubots.net>
*/

syntax = "proto3";

package message.support.nubugger;

message Configuration {
	message File {
		Value content = 1;
		string path = 2;
	}

	message Value {
		oneof kind {
		    NullValue null_value = 1;
		    double number_value = 2;
		    string string_value = 3;
		    bool bool_value = 4;
		    Map map_value = 5;
		    ListValue list_value = 6;
		}

		string tag = 7;
	}

	enum NullValue {
		NULL_VALUE = 0;
	}

	message ListValue {
		repeated Value values = 1;
	}

	message Map {
		map<string, Value> fields = 1;
	}

	repeated File files = 1;
}
